--- a/index.html
+++ b/index.html
@@ -63,16 +63,6 @@
 		</div>
 	</main>
 
-	<audio
-		id="keypress"
-		src="./assets/keypress.mp3">
-	</audio>
-
-	<audio
-		id="return"
-		src="./assets/return.mp3">
-	</audio>
-
 	<script src="https://cdn.ravenjs.com/3.12.1/raven.min.js"></script>
 	<script>if (document.location.hostname === "typewritesomething.com") {
 		!function(a,b,c,d,e,f,g){a.GoogleAnalyticsObject=e,a[e]=a[e]||function(){(a[e].q=a[e].q||[]).push(arguments)},a[e].l=1*new Date,f=b.createElement(c),g=b.getElementsByTagName(c)[0],f.async=1,f.src=d,g.parentNode.insertBefore(f,g)}(window,document,"script","https://www.google-analytics.com/analytics.js","ga"),ga("create","UA-73887811-5","auto"),ga("send","pageview");
@@ -82,6 +72,6 @@
 	} else {
 		function ga () {}
 	}</script>
-	<script src="./src/script.js"></script>
+	<script src="./dist/main.js"></script>
 </body>
 </html>
