--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       crossorigin
     />
     <link rel="stylesheet" href="/static/style.css" />
+    <script async defer src="/dist/main.js"></script>
   </head>
 
   <body>
@@ -114,7 +115,5 @@
       src="/static/audio/keypress.mp3"
     ></audio>
     <audio preload="auto" id="return" src="/static/audio/return.mp3"></audio>
-
-    <script src="/dist/main.js"></script>
   </body>
 </html>
